@@ -25,13 +25,15 @@ module Emails
       @branch  = branch
       if @commits.length > 1
         @target_url = project_compare_url(@project, from: @commits.first, to: @commits.last)
+        @subject = "#{@commits.length} new commits pushed to repository"
       else
         @target_url = project_commit_url(@project, @commits.first)
+        @subject = @commits.first.title
       end
 
       mail(from: sender(author_id),
            cc: recipient,
-           subject: subject("New push to repository"))
+           subject: subject(@subject))
     end
   end
 end
